update swagger doc
