# src/controllers/ping_controller.go
@@ -13,6 +13,14 @@ func NewPingController() *PingController {
 	return &PingController{}
 }
 
+// Ping godoc
+//
+//	@Summary		Ping server
+//	@Description	Check if the server is running
+//	@Tags			health
+//	@Produce		plain
+//	@Success		200	{string}	string	"pong"
+//	@Router			/api/v1/ping [get]
 func (c *PingController) Ping(ctx *gin.Context) {
 	ctx.String(http.StatusOK, "pong")
 }
